chore(structure): Revamp folder structure

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -2,7 +2,7 @@ server {
 
     listen      80;
     server_name cdn.twp.test;
-    root        /opt/twp/cdn/static;
+    root        /opt/twp/cdn/src;
 
     location / {
         try_files $uri $uri.html $uri/ =404;
