--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   download:
-    runs-on: self-managed
+    runs-on: self-hosted
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -36,7 +36,7 @@ jobs:
 
   publish:
     needs: build
-    runs-on: self-managed
+    runs-on: self-hosted
     env:
       PROJ: ${{ vars.PROJ }}
       APP: cdn
