--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,9 @@ name: CI Pipeline
 
 on:
   push:
+    branches:
+      - dev
+      - release
     tags:
       - 'v*'
 
@@ -15,16 +18,22 @@ jobs:
   build:
     needs: download
     runs-on: self-hosted
+    environment: ${{ github.ref == 'refs/heads/dev' && 'dev' ||
+                    github.ref == 'refs/heads/release' && 'qa' ||
+                    startsWith(github.ref, 'refs/tags/v') && 'prod' }}
     env:
       PROJ: ${{ vars.PROJ }}
       APP: cdn
       ENV: ${{ vars.ENV }}
-      VERSION: ${{ github.ref_name }}
       REGISTRY: ${{ vars.REGISTRY }}
       REGISTRY_USERNAME: ${{ vars.REGISTRY_USERNAME }}
       REGISTRY_PASSWORD: ${{ vars.REGISTRY_PASSWORD }}
       IMAGE: $PROJ-$APP
-      TAG: ${VERSION:1}-$ENV
+      TAG: ${{ github.ref_type == 'tag' &&
+              github.ref_name != null &&
+              startsWith(github.ref_name, 'v') &&
+              github.ref_name[1:] ||
+              format('{0}-{1}', github.ref_name, github.run_number) }}
     steps:
       - name: Build container image
         run: |
@@ -37,16 +46,23 @@ jobs:
   publish:
     needs: build
     runs-on: self-hosted
+    environment: ${{ github.ref == 'refs/heads/dev' && 'dev' ||
+                    github.ref == 'refs/heads/release' && 'qa' ||
+                    startsWith(github.ref, 'refs/tags/v') && 'prod' }}
     env:
       PROJ: ${{ vars.PROJ }}
       APP: cdn
       ENV: ${{ vars.ENV }}
-      VERSION: ${{ github.ref_name }}
       REGISTRY: ${{ vars.REGISTRY }}
       REGISTRY_USERNAME: ${{ vars.REGISTRY_USERNAME }}
       REGISTRY_PASSWORD: ${{ vars.REGISTRY_PASSWORD }}
       IMAGE: $PROJ-$APP
-      TAG: ${VERSION:1}-$ENV
+      TAG: ${{ github.ref_type == 'tag' &&
+              github.ref_name != null &&
+              startsWith(github.ref_name, 'v') &&
+              github.ref_name[1:] ||
+              format('{0}-{1}', github.ref_name, github.run_number) }}
+
     steps:
       - name: Login into registry
         run: docker login -u $REGISTRY_USERNAME -P $REGISTRY_PASSWORD
