--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
       TAG: ${{ github.ref_type == 'tag' &&
               github.ref_name != null &&
               startsWith(github.ref_name, 'v') &&
-              github.ref_name[1:] ||
+              replace(github.ref_name, 'v', '') ||
               format('{0}-{1}', github.ref_name, github.run_number) }}
     steps:
       - name: Build container image
@@ -60,7 +60,7 @@ jobs:
       TAG: ${{ github.ref_type == 'tag' &&
               github.ref_name != null &&
               startsWith(github.ref_name, 'v') &&
-              github.ref_name[1:] ||
+              replace(github.ref_name, 'v', '') ||
               format('{0}-{1}', github.ref_name, github.run_number) }}
 
     steps:
