refactor(ci): use IMAGE_NAME var for Docker image name in username/repo format

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: |
-            name=${{ vars.PROJ }}-${{ vars.APP }}
+            name=${{ vars.IMAGE_NAME }}
           tags: |
             type=ref,event=branch
             type=semver,pattern={{version}}
